--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.8.3",
     "prettier": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0"
+    "typescript-eslint": "^8.16.0",
+    "zod": "^3.23.8"
   }
 }
