--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "http-status": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/http-status-codes": "^1.2.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
