--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "http-status": "^2.0.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
