--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "http-status": "^2.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -31,6 +32,7 @@
     "@types/express": "^5.0.0",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
